refactor(grpc-client): add an RPC method to get a custom resource definition
hexiaodai <536574781@qq.com>
