# src/apis/apiextensions/v1alpha1/custom_resource_definition.pb.go
@@ -22,7 +22,7 @@ const (
 )
 
 // CustomResourceDefinition message of CustomResource definition
-type CustomResourceDefinition struct {
+type CustomResourceDefinitionBak struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
@@ -36,8 +36,8 @@ type CustomResourceDefinition struct {
 	Status string `protobuf:"bytes,3,opt,name=status,proto3" json:"status,omitempty"`
 }
 
-func (x *CustomResourceDefinition) Reset() {
-	*x = CustomResourceDefinition{}
+func (x *CustomResourceDefinitionBak) Reset() {
+	*x = CustomResourceDefinitionBak{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_apiextensions_v1alpha1_custom_resource_definition_proto_msgTypes[0]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -45,13 +45,13 @@ func (x *CustomResourceDefinition) Reset() {
 	}
 }
 
-func (x *CustomResourceDefinition) String() string {
+func (x *CustomResourceDefinitionBak) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*CustomResourceDefinition) ProtoMessage() {}
+func (*CustomResourceDefinitionBak) ProtoMessage() {}
 
-func (x *CustomResourceDefinition) ProtoReflect() protoreflect.Message {
+func (x *CustomResourceDefinitionBak) ProtoReflect() protoreflect.Message {
 	mi := &file_apiextensions_v1alpha1_custom_resource_definition_proto_msgTypes[0]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -63,26 +63,26 @@ func (x *CustomResourceDefinition) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use CustomResourceDefinition.ProtoReflect.Descriptor instead.
-func (*CustomResourceDefinition) Descriptor() ([]byte, []int) {
+// Deprecated: Use CustomResourceDefinitionBak.ProtoReflect.Descriptor instead.
+func (*CustomResourceDefinitionBak) Descriptor() ([]byte, []int) {
 	return file_apiextensions_v1alpha1_custom_resource_definition_proto_rawDescGZIP(), []int{0}
 }
 
-func (x *CustomResourceDefinition) GetMetadata() *types.ObjectMeta {
+func (x *CustomResourceDefinitionBak) GetMetadata() *types.ObjectMeta {
 	if x != nil {
 		return x.Metadata
 	}
 	return nil
 }
 
-func (x *CustomResourceDefinition) GetSpec() string {
+func (x *CustomResourceDefinitionBak) GetSpec() string {
 	if x != nil {
 		return x.Spec
 	}
 	return ""
 }
 
-func (x *CustomResourceDefinition) GetStatus() string {
+func (x *CustomResourceDefinitionBak) GetStatus() string {
 	if x != nil {
 		return x.Status
 	}
@@ -99,20 +99,20 @@ var file_apiextensions_v1alpha1_custom_resource_definition_proto_rawDesc = []byt
 	0x6b, 0x75, 0x62, 0x65, 0x76, 0x6d, 0x2e, 0x69, 0x6f, 0x2e, 0x61, 0x70, 0x69, 0x73, 0x2e, 0x61,
 	0x70, 0x69, 0x65, 0x78, 0x74, 0x65, 0x6e, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x76, 0x31, 0x61,
 	0x6c, 0x70, 0x68, 0x61, 0x31, 0x1a, 0x17, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x6f, 0x62, 0x6a,
-	0x65, 0x63, 0x74, 0x5f, 0x6d, 0x65, 0x74, 0x61, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x89,
-	0x01, 0x0a, 0x18, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63,
-	0x65, 0x44, 0x65, 0x66, 0x69, 0x6e, 0x69, 0x74, 0x69, 0x6f, 0x6e, 0x12, 0x41, 0x0a, 0x08, 0x6d,
-	0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x25, 0x2e,
-	0x76, 0x69, 0x6e, 0x6b, 0x2e, 0x6b, 0x75, 0x62, 0x65, 0x76, 0x6d, 0x2e, 0x69, 0x6f, 0x2e, 0x61,
-	0x70, 0x69, 0x73, 0x2e, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2e, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74,
-	0x4d, 0x65, 0x74, 0x61, 0x52, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x12, 0x12,
-	0x0a, 0x04, 0x73, 0x70, 0x65, 0x63, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x73, 0x70,
-	0x65, 0x63, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x03, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x42, 0x37, 0x5a, 0x35, 0x67, 0x69,
-	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6b, 0x75, 0x62, 0x65, 0x76, 0x6d, 0x2e,
-	0x69, 0x6f, 0x2f, 0x76, 0x69, 0x6e, 0x6b, 0x2f, 0x61, 0x70, 0x69, 0x73, 0x2f, 0x61, 0x70, 0x69,
-	0x65, 0x78, 0x74, 0x65, 0x6e, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70,
-	0x68, 0x61, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x65, 0x63, 0x74, 0x5f, 0x6d, 0x65, 0x74, 0x61, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x8c,
+	0x01, 0x0a, 0x1b, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63,
+	0x65, 0x44, 0x65, 0x66, 0x69, 0x6e, 0x69, 0x74, 0x69, 0x6f, 0x6e, 0x42, 0x61, 0x6b, 0x12, 0x41,
+	0x0a, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b,
+	0x32, 0x25, 0x2e, 0x76, 0x69, 0x6e, 0x6b, 0x2e, 0x6b, 0x75, 0x62, 0x65, 0x76, 0x6d, 0x2e, 0x69,
+	0x6f, 0x2e, 0x61, 0x70, 0x69, 0x73, 0x2e, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2e, 0x4f, 0x62, 0x6a,
+	0x65, 0x63, 0x74, 0x4d, 0x65, 0x74, 0x61, 0x52, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74,
+	0x61, 0x12, 0x12, 0x0a, 0x04, 0x73, 0x70, 0x65, 0x63, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52,
+	0x04, 0x73, 0x70, 0x65, 0x63, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18,
+	0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x42, 0x37, 0x5a,
+	0x35, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6b, 0x75, 0x62, 0x65,
+	0x76, 0x6d, 0x2e, 0x69, 0x6f, 0x2f, 0x76, 0x69, 0x6e, 0x6b, 0x2f, 0x61, 0x70, 0x69, 0x73, 0x2f,
+	0x61, 0x70, 0x69, 0x65, 0x78, 0x74, 0x65, 0x6e, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x76, 0x31,
+	0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -129,11 +129,11 @@ func file_apiextensions_v1alpha1_custom_resource_definition_proto_rawDescGZIP() 
 
 var file_apiextensions_v1alpha1_custom_resource_definition_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
 var file_apiextensions_v1alpha1_custom_resource_definition_proto_goTypes = []interface{}{
-	(*CustomResourceDefinition)(nil), // 0: vink.kubevm.io.apis.apiextensions.v1alpha1.CustomResourceDefinition
-	(*types.ObjectMeta)(nil),         // 1: vink.kubevm.io.apis.types.ObjectMeta
+	(*CustomResourceDefinitionBak)(nil), // 0: vink.kubevm.io.apis.apiextensions.v1alpha1.CustomResourceDefinitionBak
+	(*types.ObjectMeta)(nil),            // 1: vink.kubevm.io.apis.types.ObjectMeta
 }
 var file_apiextensions_v1alpha1_custom_resource_definition_proto_depIdxs = []int32{
-	1, // 0: vink.kubevm.io.apis.apiextensions.v1alpha1.CustomResourceDefinition.metadata:type_name -> vink.kubevm.io.apis.types.ObjectMeta
+	1, // 0: vink.kubevm.io.apis.apiextensions.v1alpha1.CustomResourceDefinitionBak.metadata:type_name -> vink.kubevm.io.apis.types.ObjectMeta
 	1, // [1:1] is the sub-list for method output_type
 	1, // [1:1] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
@@ -148,7 +148,7 @@ func file_apiextensions_v1alpha1_custom_resource_definition_proto_init() {
 	}
 	if !protoimpl.UnsafeEnabled {
 		file_apiextensions_v1alpha1_custom_resource_definition_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*CustomResourceDefinition); i {
+			switch v := v.(*CustomResourceDefinitionBak); i {
 			case 0:
 				return &v.state
 			case 1:
